Fix spelling typo in pod install command

--- a/example_projects.html
+++ b/example_projects.html
@@ -245,7 +245,7 @@ $(function(){
 	BVSDKDemo: Full SDK Integration Examples
 </div>
 
-The full BVSDK project works out-of-the box under the <code>/Examples/BVSDKDemo</code> folder. Just run <code>pod isntall</code> in that folder and open the <code>BVSDKDemo.xcworkspace</code> to execute the project. By default the app runs in mock mode (using <a href="https://github.com/AliSoftware/OHHTTPStubs/">OHHTTPSStubs</a>) and will display sample data from a ficticious project catalog for a ficticious company, Endurance Cycles.
+The full BVSDK project works out-of-the box under the <code>/Examples/BVSDKDemo</code> folder. Just run <code>pod install</code> in that folder and open the <code>BVSDKDemo.xcworkspace</code> to execute the project. By default the app runs in mock mode (using <a href="https://github.com/AliSoftware/OHHTTPStubs/">OHHTTPSStubs</a>) and will display sample data from a ficticious project catalog for a ficticious company, Endurance Cycles.
 </br></br>
 The demonstration shows the major components of the SDK from Product Recommendations, Advertising, Curations REST API and Custom Photo Upload. The Conversations examples demonstrate how read Conversation statistics, fetch reviews and questions as well as demonstrations on how to construct forms for uploading UGC content such as Rating & Reviews, Questions, and Feedback.
 </br></br>
