--- a/curations_custom_posts.html
+++ b/curations_custom_posts.html
@@ -152,10 +152,16 @@ $(function(){
                              id="conversationsDropdown">
                             <ul>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="using_conversations.html"><span>Using Conversations</span></a>
+                                    <a class="nav-link" href="content_display.html"><span>Content Display</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="content_submission.html"><span>Content Submission</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="conversations_iovation.html"><span>Authenticity with iovation</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upgrading_conversations.html"><span>Upgrading Conversations</span></a>
                                 </li>
                             </ul>
                         </div>
