--- a/index.html
+++ b/index.html
@@ -152,10 +152,16 @@ $(function(){
                              id="conversationsDropdown">
                             <ul>
                                 <li class="nav-item">
-                                    <a class="nav-link" href="using_conversations.html"><span>Using Conversations</span></a>
+                                    <a class="nav-link" href="content_display.html"><span>Content Display</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="content_submission.html"><span>Content Submission</span></a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link" href="conversations_iovation.html"><span>Authenticity with iovation</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="upgrading_conversations.html"><span>Upgrading Conversations</span></a>
                                 </li>
                             </ul>
                         </div>
@@ -242,7 +248,7 @@ $(function(){
     </a>
   </div>
   <div class="flex cel-fl-3" style="padding-left: 10px">
-    <a class="index-banner" href="using_conversations.html">
+    <a class="index-banner" href="content_display.html">
       <h5 class="h5link">Conversations <i class="fa fa-chevron-right"></i></h5>
       <p class="gray">Consumer-generated content and analytics</p>
     </a>
@@ -250,6 +256,15 @@ $(function(){
 
 </div>
 <hr>
+
+<h3>Try out the Bazaarvoice Mobile SDK Demo!</h3>
+
+
+The demo below highlights the major funtionality of Bazaarvoice's native mobile solution. The source code for this demo project is also available in the SDK under the <code>/Examples/BVSDKDemo</code> folder.
+<br/><br/> 
+
+<iframe src="https://appetize.io/embed/3thpzck5tjp7pzag0q5yfqjrfm?device=iphone6&scale=85&autoplay=false&orientation=portrait&deviceColor=white" width="416px" height="870px" frameborder="0" scrolling="no"></iframe>
+
 
 
               </div>
