don't use jpg for images, use png

--- a/content_display.html
+++ b/content_display.html
@@ -237,7 +237,7 @@ The completed project for this code walkthrough for Swift and Objective-C is in 
 <h4>Basics</h4>
 <p>Displaying content is centered around the idea of a <strong>Product Display Page</strong>. For example, the following example page is populated using a single <code>ProductDisplayPageRequest</code>, and shown inside of a <code>BVProductDisplayPageViewController</code>.</p>
 
-<img src="ios-img/conversations/productDisplayPageRequest.jpg" style="height:410px; box-shadow: 0px 0px 8px #444;" class="center-block img-fluid" />
+<img src="ios-img/conversations/productDisplayPageRequest.png" style="height:410px; box-shadow: 0px 0px 8px #444;" class="center-block img-fluid" />
 
 <br>
 <p>We're showing very common pieces of content here: average rating, number of reviews, and number of questions/answers. After showing the <strong>Product Display Page</strong>, you can paginate through more <strong>Reviews</strong> and <strong>Question/Answers</strong> (discussed below). Lastly, you can load <strong>Bulk Ratings</strong> for multiple products at a time, which is useful when showing stars and number of reviews on a category page.</p>
