another typo fix

--- a/content_display.html
+++ b/content_display.html
@@ -559,7 +559,7 @@ BVReviewsRequest* request = [[BVReviewsRequest alloc] initWithProductId:@"test1"
 </ul>
 
 <br>
-<p>Let's create a UIViewController that holds a <code>BVReviewTableView</code> and display 10 reviews in it using <code>BVReviewTableViewCell</code>.</p>
+<p>Let's create a UIViewController that holds a <code>BVReviewsTableView</code> and display 10 reviews in it using <code>BVReviewTableViewCell</code>.</p>
 <ul>
 	<li>
 		<p>Create a new Cocoa Touch Class called <strong>DemoReviewViewController</strong> and make it subclass <code>UIViewController</code>:</p>
