add in a note about BVSDKDemo inability to run on device due to App Groups capability

--- a/example_projects.html
+++ b/example_projects.html
@@ -256,6 +256,10 @@ The full BVSDK project works out-of-the box under the <code>/Examples/BVSDKDemo<
 The demonstration shows the major components of the SDK from Product Recommendations, Advertising, Curations REST API and Custom Photo Upload. The Conversations examples demonstrate how read Conversation statistics, fetch reviews and questions as well as demonstrations on how to construct forms for uploading UGC content such as Rating & Reviews, Questions, and Feedback.
 </br></br>
 
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Note: The BVSDKDemo uses App Groups capabilities and an Extension. Becuase of this you won't be able to run this app on your device unless you remove the Curations Custom Post Extension or add the proper permission to your own App ID in your own Apple Developer Account.</p>
+
+</br>
+
 <video id="bvsdkDemoVid" width="320" height="480" autoplay loop class="center-block img-fluid">
       <source src="ios-img/bvsdkdemo/bvsdkdemo_movie.mp4" type="video/mp4" title="No video playback capabilities">
       <source src="ios-img/bvsdkdemo/bvsdkdemo_movie.og" type="video/ogg" title="No video playback capabilities">
