--- a/ios-assets/api_reference/Classes/BVReviewCollectionViewCell.html
+++ b/ios-assets/api_reference/Classes/BVReviewCollectionViewCell.html
@@ -96,7 +96,7 @@
 					<div class="section section-overview">
 						<a title="Overview" name="overview"></a>
 						<h2 class="subtitle subtitle-overview">Overview</h2>
-						<p>A sub-classed UICollectionView cell that contains one <a href="../Classes/BVReview.html">BVReview</a> object for display.
+						<p>A sub-classed UICollectionView cell that contains one BVReview object for display.
 Clients should provide their one xib for the view.</p>
 					</div>
 					
