--- a/product_recommendations.html
+++ b/product_recommendations.html
@@ -117,7 +117,7 @@ $(function(){
                 </span>
                 <ul>
                     <li class="nav-item">
-                        <a class="nav-link" href="product_recommendations.html"><span>Product Recommendations</span></a>
+                        <a class="nav-link" href="product_recommendations.html"><span>Product Recommendations (Beta)</span></a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="advertising.html"><span>Advertising</span></a>
@@ -166,6 +166,9 @@ $(function(){
                             </ul>
                         </div>
 
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="location.html"><span>Location (Beta)</span></a>
                     </li>
                 </ul>
             </li>
@@ -221,7 +224,7 @@ $(function(){
 	Product Recommendations
 </div>
 
-<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>The Product Recommendations module is currently in limited beta release. If you'd like to participate, contact <a href="mailto:mobilecoreteam@bazaarvoice.com">Bazaarvoice.</a></span></p>
+<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i> The Product Recommendations module is currently in limited beta release. If you'd like to participate, contact <a href="mailto:mobilecoreteam@bazaarvoice.com">Bazaarvoice.</a></span></p>
 
 <p>Use the following guide to fetch and display product recommendations in your iOS app with Bazaarvoice Mobile SDKs. The instructions include Swift and Objective-C implementation to display Product Recommendations in a <code>UICollectonView</code>. If you are familiar with the design pattern of implementing a <code>UICollectionView</code> or <code>UITableView</code> in iOS, implementing the Product Recommendations module should be straightforward.</p>
 
