--- a/ios-assets/api_reference/Classes/BVProductDisplayPageViewController.html
+++ b/ios-assets/api_reference/Classes/BVProductDisplayPageViewController.html
@@ -96,7 +96,7 @@
 					<div class="section section-overview">
 						<a title="Overview" name="overview"></a>
 						<h2 class="subtitle subtitle-overview">Overview</h2>
-						<p>This sub-class of UIViewController can be sublcassed by clients who also implement the <a href="../Classes/BVProductDisplayPageRequest.html">BVProductDisplayPageRequest</a> API.</p>
+						<p>This sub-class of UIViewController can be sublcassed by clients who also implement the BVProductDisplayPageRequest API.</p>
 					</div>
 					
 					
