--- a/location.html
+++ b/location.html
@@ -242,7 +242,7 @@ $(function(){
 <h2>Using the Location Module</h2>
 <br>
 <h4>Requesting User Location Permission</h4>
-<p>You will always need to obtain on permission for user location.: the Location module cannot function without this. Please follow best practices when requesting permission. Request to use location at a time when it is contexually relavent, such as when trying to use a "Store Finder." Ask your users from your own dialog first, then present the actual system prompt if the user opts in. This way you can provide the detailed benefits they would receive if they grant permission. Conusult the Apple Developer documentation <a href="https://developer.apple.com/library/ios/documentation/UserExperience/Conceptual/LocationAwarenessPG/CoreLocation/CoreLocation.html">Location and Maps Programming guide for details on requesting user location in your app</a> for more information on requesting your end user's location.
+<p>You will always need to obtain on permission for user location.: the Location module cannot function without this. Please follow best practices when requesting permission. Request to use location at a time when it is contexually relavent, such as when trying to use a "Store Finder." Ask your users from your own dialog first, then present the actual system prompt if the user opts in. This way you can provide the detailed benefits they would receive if they grant permission. Consult the Apple Developer documentation <a href="https://developer.apple.com/library/ios/documentation/UserExperience/Conceptual/LocationAwarenessPG/CoreLocation/CoreLocation.html">Location and Maps Programming guide for details on requesting user location in your app</a> for more information on requesting your end user's location.
 </p>
 
 <br>
@@ -309,7 +309,7 @@ class MyViewController: UIViewController, BVLocationManagerDelegate {
 
 <h4>Notifcations when User Enters Location</h4>
 <p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  Contact Bazaarvoice to set up notifications</p>
-<p>The Location module also supports notifications. Notifications may be dynamically configured by contacting Bazaarvoice. You will also have an opportunity in code to decided where a notification is displayed or not and modify the notification to be displayed. Note notifications delegate methods will only be invoked when app is in the background.</p>
+<p>The Location module also supports notifications. Notifications may be dynamically configured by contacting Bazaarvoice. You will also have an opportunity in code to decide where a notification is displayed or not and modify the notification to be displayed. Note, notifications delegate methods will only be invoked when app is in the background.</p>
 <ul class="nav nav-tabs" role="tablist">
   <li role="presentation" class="active"><a href="#swift" aria-controls="swift" role="tab" data-toggle="tab">Swift</a></li>
   <li role="presentation"><a href="#objc" aria-controls="objc" role="tab" data-toggle="tab">Objective-C</a></li>
