add in note about examples with swift require Xcode 7.3+

--- a/example_projects.html
+++ b/example_projects.html
@@ -222,6 +222,9 @@ $(function(){
 
                 The BVSDK contains very basic minimal configuration examples (Basic Example Projects) for each SDK module as well as a full demo project highlighting a full integration of all the BVSDK components. Preview any of the samples in the SDK to help you get your implementation up and running quickly.
 
+<p>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  NOTE: The Swift and BVSDKDemo examples require XCode 7.3 or greater. All Swift examples are written and tested against the Swift 2.3 compiler.</p>
+
 <div class="flex flex-row" id="content_title">
 	Basic Example Projects
 </div>
