--- a/example_projects.html
+++ b/example_projects.html
@@ -167,6 +167,29 @@ $(function(){
                         </div>
 
                     </li>
+
+
+                     <li class="nav-item">
+                        <a class="nav-link" role="button" data-toggle="collapse" href="#conversationsStoresDropdown"
+                           aria-expanded="false" aria-controls="conversationsStoresDropdown">
+                                <span><span>Conversations for Stores</span><span style="float:right;"><i
+                                        id="conversationsStoresDropdownArrow"
+                                        class="fa fa-sort-desc fa-rotate-270"></i></span></span>
+                        </a>
+                        <div class="collapse "
+                             id="conversationsStoresDropdown">
+                            <ul>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="conversations_stores.html"><span>Conversations for Stores</span></a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" href="conversations_stores_push.html"><span>Stores Push Notifications</span></a>
+                                </li>
+                            </ul>
+                        </div>
+
+                    </li>
+
                     <li class="nav-item">
                         <a class="nav-link" href="location.html"><span>Location (Beta)</span></a>
                     </li>
@@ -223,7 +246,7 @@ $(function(){
                 The BVSDK contains very basic minimal configuration examples (Basic Example Projects) for each SDK module as well as a full demo project highlighting a full integration of all the BVSDK components. Preview any of the samples in the SDK to help you get your implementation up and running quickly.
 
 <p>
-<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  NOTE: The Swift and BVSDKDemo examples require XCode 7.3 or greater. All Swift examples are written and tested against the Swift 2.3 compiler.</p>
+<p class="bg-info well-lg" style="padding:4px;"><i class="fa fa-hand-o-right"></i>  NOTE: The Swift and BVSDKDemo examples require XCode 8.0+ or greater. All Swift examples are written and tested against the Swift 2.3 compiler.</p>
 
 <div class="flex flex-row" id="content_title">
 	Basic Example Projects
