Updates for dynamic framework and swift 3 support (BVSDK 6.0.0

--- a/advertising.html
+++ b/advertising.html
@@ -290,7 +290,7 @@ $(function(){
 	<div role="tabpanel" class="tab-pane active" id="swift">	
 		
 <pre><code class="swift">let request = DFPRequest()
-request.customTargeting = BVSDKManager.sharedManager().getCustomTargeting()
+request.customTargeting = BVSDKManager.shared().getCustomTargeting()
 ...</code></pre>
 	</div>
 	<!-- objective-c -->
