--- a/bv_pixel.html
+++ b/bv_pixel.html
@@ -276,8 +276,8 @@ $(function(){
 <pre><code class="swift">import BVSDK
 </code></pre>
 		<p>Then add the following to your AppDelegate's <code>didFinishLaunchingWithOptions</code> function:</p>
-<pre><code class="swift">BVSDKManager.sharedManager().clientId = "YOUR_CLIENT_ID"
-BVSDKManager.sharedManager().staging = true // Set to false for production!
+<pre><code class="swift">BVSDKManager.shared().clientId = "YOUR_CLIENT_ID"
+BVSDKManager.shared().staging = true // Set to false for production!
 </code></pre>
 	</div>
 	<!-- objective-c -->
