--- a/user_authentication_token.html
+++ b/user_authentication_token.html
@@ -270,7 +270,7 @@ $(function(){
 	<!-- swift -->
 	<div role="tabpanel" class="tab-pane active" id="swift">
 <pre><code class="swift">
-BVSDKManager.sharedManager().setUserWithAuthString("0ce436b29697d6bc74f30f724b9b0bb6646174653d31323334267573657269643d5265636f6d6d656e646174696f6e7353646b54657374")
+BVSDKManager.shared().setUserWithAuthString("0ce436b29697d6bc74f30f724b9b0bb6646174653d31323334267573657269643d5265636f6d6d656e646174696f6e7353646b54657374")
 </code></pre>
 	</div>
 	<!-- objective-c -->
