Update iovation SDK download instructions, misc cosmetic tweaks

--- a/curations_custom_posts.html
+++ b/curations_custom_posts.html
@@ -261,7 +261,7 @@ $(function(){
 </ul>
 <br>
 
-<p class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>  Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.</p>
+<p><span class="bg-warning well-lg" style="padding:4px;"> <i class="fa fa-hand-o-right"></i>Important: Before you start implementing this Mobile SDK module, verify your installation by checking the steps on the <a href="./installation.html">Installation and Configuration</a> page.</span></p>
 
 
 <h3>Example Custom Post</h3>
